# awesome-rss-reader

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_feed_refresh_job_state_changed_at.py
awesome_rss_reader/application/: di.py  settings.py
awesome_rss_reader/cli/: __init__.py  api.py  scheduler.py  worker.py
awesome_rss_reader/core/entity/: feed.py  feed_content.py  feed_post.py  feed_refresh_job.py  user.py  user_feed.py  user_post.py
awesome_rss_reader/core/repository/: atomic.py  feed.py  feed_content.py  feed_post.py  feed_refresh_job.py  user.py  user_feed.py  user_post.py
awesome_rss_reader/core/usecase/: authenticate_user.py  base.py  create_feed.py  feed.py  follow_feed.py  list_feed_posts.py  list_user_feeds.py  post.py  read_post.py  refresh_feed.py  schedule_feed_update.py  unfollow_feed.py  unread_post.py  update_feed_content.py
awesome_rss_reader/data/noop/: users.py
awesome_rss_reader/data/postgres/: database.py  models.py
awesome_rss_reader/data/postgres/repositories/: atomic.py  base.py  feed_posts.py  feed_refresh_jobs.py  feeds.py  user_feeds.py  user_posts.py
awesome_rss_reader/fastapi/: entrypoint.py
awesome_rss_reader/fastapi/api/: router.py  schemas.py
awesome_rss_reader/fastapi/api/views/: feed_id.py  feeds.py  post_id.py  posts.py
awesome_rss_reader/fastapi/depends/: auth.py  di.py  logging.py
awesome_rss_reader/fastapi/misc/: router.py  schemas.py
awesome_rss_reader/fastapi/misc/views/: info.py  redirects.py  token.py
awesome_rss_reader/utils/: dtime.py
deployments/charts/awesome-rss-reader/: Chart.yaml  values.yaml
deployments/charts/awesome-rss-reader/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  job.yaml  service.yaml
tests/: conftest.py  factories.py
tests/factories/: feed.py  feed_refresh_job.py  user.py  user_feed.py
tests/integration/api/: test_create_feed.py  test_follow_feed.py  test_list_feeds.py  test_list_posts.py  test_read_post.py  test_refresh_feed.py  test_unfollow_feed.py  test_unread_post.py
tests/integration/misc/: test_create_token.py  test_get_docs.py  test_get_info.py
tests/integration/monitoring/: test_get_info.py
tests/integration/usecases/: test_schedule_feed_update.py  test_update_feed_content.py
tests/pytest_fixtures/: api.py  data.py  db.py  types.py
tests/unit/: conftest.py
tests/unit/repositories/noop/: test_noop_user_repository.py
tests/unit/repositories/postgres/: test_postgres_feed_post_repository.py  test_postgres_feed_repository.py  test_postgres_refresh_job_repository.py  test_postgres_user_feed_repository.py  test_postgres_user_post_repository.py
tests/unit/usecases/: test_create_feed_uc.py  test_follow_feed_uc.py  test_list_feed_posts_uc.py  test_list_followed_feeds.py  test_list_followed_feeds_uc.py  test_read_post_uc.py  test_refresh_feed_uc.py  test_schedule_feed_update_uc.py  test_unfollow_feed_uc.py  test_unread_post_uc.py  test_update_feed_content_uc.py
tests/unit/views/: test_create_feed_view.py  test_follow_feed_view.py  test_list_feeds_view.py  test_list_posts_view.py  test_read_post_view.py  test_refresh_feed_view.py  test_unfollow_feed_view.py  test_unread_post_view.py
